@@ -1,3 +1,8 @@
+2015-02-11  Pedro Alves  <pedro@codesourcery.com>
+
+	* infrun.c (adjust_pc_after_break): Don't adjust the PC just
+	because the event thread is not the current thread.
+
 2015-02-11  Doug Evans  <xdje42@gmail.com>
 
 	* gdbtypes.c (internal_type_self_type): If TYPE_SPECIFIC_FIELD hasn't
